@@ -1,5 +1,5 @@
 #
 # Tcl package index file
 #
-package ifneeded Tclsha1 @PACKAGE_VERSION@ \
+package ifneeded @PACKAGE_NAME@ @PACKAGE_VERSION@ \
     [list load [file join $dir @PKG_LIB_FILE@] @PACKAGE_NAME@]
